--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Mitr:wght@200;300;400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Playwrite+ES:wght@100..400&display=swap");
 
 body {
-    margin: 0;
-    font-family: "Mitr", sans-serif;
-    letter-spacing: 0.05em;
+  margin: 0;
+  font-family: "Mitr", sans-serif;
+  letter-spacing: 0.05em;
 }
